Code washing and formatting